# GaussNewton

./: .gitignore  README.MD  README.md  README.txt  gauss_newton.ipynb  gauss_newton_math.py  gauss_newton_test.ipynb  mhe_test.ipynb  pyproject.toml  systems.py  theory.ipynb  theory_gauss_newton.ipynb  theory_mhe.ipynb  utils.py
codegen/: mhe_codegen.py  mpc_codegen.py  ocp_utils.py  params.py
codegen/mhe/: mhe_base_model_interface.py  mhe_kinematic_model.py
codegen/mhe_codegen/: Makefile  acados_sim_solver_bicycle_mhe.c  acados_sim_solver_bicycle_mhe.h  acados_solver.pxd  acados_solver_bicycle_mhe.c  acados_solver_bicycle_mhe.h  main_bicycle_mhe.c  main_sim_bicycle_mhe.c  mhe_config.json
codegen/mhe_codegen/bicycle_mhe_cost/: bicycle_mhe_cost.h  bicycle_mhe_cost_ext_cost_0_fun.c  bicycle_mhe_cost_ext_cost_0_fun_jac.c  bicycle_mhe_cost_ext_cost_0_fun_jac_hess.c  (+6 more)
codegen/mpc/: mpc_base_model_interface.py  mpc_dynamic_model.py  mpc_kinematic_model.py
commom_utils/: ode_system.py  system_config.py  systems.py
gauss_newton/: gauss_newton_math.py  gauss_newton_test.ipynb  utils.py
mhe/: mhe_base_model_interface.py  mhe_test.ipynb  mhe_utils.py  params.py
mhe/codegen/: mhe_codegen.py  mpc_codegen.py  params.py
mpc/: mpc_base_interface.py  mpc_control_utils.py  mpc_sim_utils.py  mpc_test.ipynb  params.py
mpc/tmp_generated/: Makefile  acados_ocp_nlp2.json  acados_solver.pxd  acados_solver_kinematik_mpc.h  main_kinematik_mpc.c  main_sim_kinematik_mpc.c
pytests/: gauss_newton_test.py  mhe_test.py
test/: gauss_newton_test.py  mhe_test.py
(+63 files in other folders)
