[project]
name = "gaussnewton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "casadi>=3.7.2",
    "jax>=0.6.2",
    "jaxadi>=0.4.0",
    "jaxlib>=0.6.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pytest>=9.0.2",
    "scipy>=1.15.3",
    "tqdm>=4.67.3",
]
